--- a/scss/edit.scss
+++ b/scss/edit.scss
@@ -80,5 +80,13 @@
   .mootimetercoledit {
     background-color: $grey-100;
     color: $grey-500;
+
+		.mootimeter-colcontent-preview-notification p {
+			color: $white-standard;
+		}
+
+		h4, h5, p, label, input {
+			color: $grey-500;
+		}
   }
 }
