--- a/scss/notification.scss
+++ b/scss/notification.scss
@@ -31,3 +31,18 @@
     padding: 1.25rem;
   }
 }
+
+.dark {
+	.mootimeter-colcontent-preview-notification {
+		background-color: $grey-500;
+		color: $white-standard;
+	}
+}
+
+.contrast {
+	.mootimeter-colcontent-preview-notification {
+		background-color: $grey-100;
+		border: 1px solid $grey-500;
+		color: $grey-500;
+	}
+}
